tests/baselines/reference/moduleAndInterfaceSharingName.errors.txt
moduleAndInterfaceSharingName.ts(7,5): error TS2322: Type 'null' is not assignable to type 'Z'.


==== moduleAndInterfaceSharingName.ts (1 errors) ====
    namespace X {
        export namespace Y {
            export interface Z { }
        }
        export interface Y { }
    }
    var z: X.Y.Z = null;
        ~
!!! error TS2322: Type 'null' is not assignable to type 'Z'.
    var z2: X.Y;